Made temp layout for weightlifting tab. Fixed scrollbar issue with testimonial page (missing closing div)

--- a/css/custom/carousel.css
+++ b/css/custom/carousel.css
@@ -415,21 +415,51 @@ ul.nav li a {
 
 .jumbotron {
 	background-image: url('/ampfit/img/amp/yummyowen.jpg');
+	background-position: 50% 50%;
 	background-attachment: fixed;
-	background-size: cover;
+	background-repeat: no-repeat;
+	background-size: contain;
+	background-color: black;
 	min-height: 400px;
 	margin-top: 0px;
 	margin-bottom: 8px;
+	margin-left: 0px;
+	width: 100%;
+    height: 100%;
 }
 
 #about-methodology-jumbo {
 	background-image: url('/ampfit/img/amp/about_amp_methodology.jpg');
 	background-position:100% 100%;
 	background-size: auto 100%;
-	background-repeat: no-repeat;
 	border-radius: 5px;
 	padding: 30px 15px;
 	min-height: 580px;
+}
+
+#weightlifting-jumbo {
+	background-image: url('/ampfit/img/amp/weightlifting_membership.jpg');
+	background-position-y: 50%;
+	background-size: contain;
+	border-radius: 5px;
+	min-height: 350px;
+}
+
+#weightlifting-snatch {
+	background-image: url('/ampfit/img/amp/weightlifting_snatch.jpg');
+	background-size: auto 100%;
+	border-radius: 5px;
+	padding: 30px 15px;
+	min-height: 500px;
+}
+
+#weightlifting-jerk {
+	background-image: url('/ampfit/img/amp/weightlifting_jerk.jpg');
+	background-position: 60% 40%;
+	background-size: 100% auto;
+	border-radius: 5px;
+	padding: 30px 15px;
+	min-height: 500px;
 }
 
 hr.ampsep {
